--- a/index.html
+++ b/index.html
@@ -1165,8 +1165,10 @@
   const phrases = [
     "Dive into the awesome ML Journey with the Wayanad initiative",
     "No more constrained to fests, the team is back with a broader aim",
-    "Join us as we explore the world of Machine Learning",
-    "Let's make ML fun together for the freshers!"
+    "Join us as we explore the world of Machine Learning 🚀",
+    "Let's make ML fun together for the freshers!",
+    "✨ Did you know? Some foundational students have outshone diploma holders at our events! 🎉",
+    "Strong claim: Many of the freshers are diving into hands-on ML skills for the first time here — and they’re loving it! 💡"
   ];
       
   let index = 0;
