--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   overflow: hidden;
   display: inline-block;
   animation: blink 0.7s step-end infinite;
-  width: 100%;
+  max-width: 100%;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
@@ -841,7 +841,7 @@
               <div class="ud-single-team wow fadeInUp" data-wow-delay=".1s">
                 <div class="ud-team-image-wrapper">
                   <div class="ud-team-image">
-                    <img src="assets/images/team/team-03.png" alt="team" />
+                    <img src="/ml/events/logicloom1/assets/img/team/3.jpg" alt="team" />
                   </div>
   
                   <img
@@ -875,7 +875,7 @@
               <div class="ud-single-team wow fadeInUp" data-wow-delay=".1s">
                 <div class="ud-team-image-wrapper">
                   <div class="ud-team-image">
-                    <img src="assets/images/team/team-03.png" alt="team" />
+                    <img src="/ml/events/logicloom1/assets/img/team/6.PNG" alt="team" />
                   </div>
   
                   <img
@@ -933,7 +933,40 @@
                   </li>
                 </ul>
               </div>
-            </div></div>
+            </div>
+<div class="col-xl-3 col-lg-3 col-sm-6">
+              <div class="ud-single-team wow fadeInUp" data-wow-delay=".1s">
+                <div class="ud-team-image-wrapper">
+                  <div class="ud-team-image">
+                    <img src="/ml/events/logicloom1/assets/img/team/4.PNG" alt="team" />
+                  </div>
+  
+                  <img
+                    src="assets/images/team/dotted-shape.svg"
+                    alt="shape"
+                    class="shape shape-1"
+                  />
+                  <img
+                    src="assets/images/team/shape-2.svg"
+                    alt="shape"
+                    class="shape shape-2"
+                  />
+                </div>
+                <div class="ud-team-info">
+                  <h5>Deepak Pandey</h5>
+                  <h6></h6>
+                </div>
+                <ul class="ud-team-socials">
+                  <li>
+                    <a href="" target="_blank">
+                      <i class="lni lni-linkedin"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
+</div>
           
           
         </div>
