--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
                 </div>
                 <div class="ud-team-info">
                   <h5>Somsubhra De</h5>
-                  <h6></h6>
+                  <h6>Core</h6>
                 </div>
                 <ul class="ud-team-socials">
                   <li>
@@ -793,7 +793,7 @@
                 </div>
                 <div class="ud-team-info">
                   <h5>Advait Vats</h5>
-                  <h6></h6>
+                  <h6>Core</h6>
                 </div>
                 <ul class="ud-team-socials">
                   <li>
@@ -825,7 +825,7 @@
                 </div>
                 <div class="ud-team-info">
                   <h5>Sayan Bhowmick</h5>
-                  <h6></h6>
+                  <h6>Core</h6>
                 </div>
                 <ul class="ud-team-socials">
                   <li>
