--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
   animation: blink 0.7s step-end infinite;
   max-width: 100%;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+
+  margin-left: auto;
+  margin-right: auto;
+  white-space: normal;
 }
 
 @keyframes blink {
