--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <a class="ud-menu-scroll" href="#contact">Contact</a>
                   </li>
                   <li class="nav-item nav-item-has-children">
-                    <a href="javascript:void(0)"> Events </a>
+                    <a href="javascript:void(0)"> Our Events </a>
                     <ul class="ud-submenu">
                       <li class="ud-submenu-item">
                         <a href="/ml/events/logicloom1/" class="ud-submenu-link">
@@ -98,6 +98,9 @@
                         </a>
                       </li>
                     </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="ud-menu-scroll" href="news/inviting-article-submissions">Article Showcase</a>
                   </li>
                 </ul>
               </div>
