--- a/index.html
+++ b/index.html
@@ -150,13 +150,6 @@
     <section id="features" class="ud-features">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12">
-            <div class="ud-section-title">
-              <span>Making "DATA <font color="red">की</font> Science" more FUN!</span>  
-            </div>
-          </div>
-        </div>
-        <div class="row">
           <div class="col-xl-3 col-lg-3 col-sm-6">
             <div class="ud-single-feature wow fadeInUp" data-wow-delay=".1s">
               <div class="ud-feature-icon">
@@ -222,11 +215,10 @@
                 positive feedback. We are excited to see how it continues to thrive! We've conducted 2 mega-events at Paradox Technicals that became one of the celebrated events
                 among students with more than 1000+ unique participants combined and Profs. from IITGN, IITR and IITM course instructors being a part of it.
               </p>
-
-              <p>
-                
-              </p>
               <a href="archives" class="ud-main-btn">Learn More</a>
+              <div class="ud-about-image">
+            <img src="/ml/assets/images/logicloom/2.jpg" alt="about-image" />
+          </div>
             </div>
           </div>
         </div>
@@ -247,7 +239,7 @@
               <span>FAQ</span>
               <h2>Any Questions?</h2>
               <p>
-                We've them answered
+                We've them answered here
               </p>
             </div>
           </div>
@@ -265,11 +257,20 @@
                   <span class="icon flex-shrink-0">
                     <i class="lni lni-chevron-down"></i>
                   </span>
-                  <span>Question</span>
+                  <span>I'm a fresher. Should I join this community?</span>
                 </button>
                 <div id="collapseOne" class="accordion-collapse collapse">
                   <div class="ud-faq-body">
-                    To be Updated
+                   <b>Definitely! That's the main objective of the initiative.</b><br>
+                    You need not worry if you're just starting out and don't have a technical or coding background. We’re providing you with
+                    easy-to-understand resources and a detailed roadmap to help you get familiar with Python first. For anyone following this
+                    roadmap dedicatedly, these will be the pre-requisites to get started with ML basics.<br>
+                    Honestly, we don't expect you to jump into complex libraries, train and fine-tune transformers or surpass the benchmark scores.
+                    We understand that it's not possible since you're completely new here and this requires ML mastery to understand the nuances in the dataset,
+                    what models will best suit the task etc.<br><br>
+                    <b>Our goal isn’t for you to master these intricate aspects right away, but rather to gain a solid understanding of the basics and how ML works.</b><br>
+                    As students of DS, you eventually need to dive into ML and this will be a fantastic hands-on opportunity & learning experience. Give it a try.
+                    Learn, join our sessions and enjoy the events :)
                   </div>
                 </div>
               </div>
@@ -284,19 +285,11 @@
                   <span class="icon flex-shrink-0">
                     <i class="lni lni-chevron-down"></i>
                   </span>
-                  <span>I'm a fresher. Should I join this community?</span>
+                  <span>I'm now from Wayanad. Can I join?</span>
                 </button>
                 <div id="collapseTwo" class="accordion-collapse collapse">
                   <div class="ud-faq-body">
-                    You need not worry if you're just starting out and don't have a technical or coding background. We’re providing you with
-                    easy-to-understand resources and a detailed roadmap to help you get familiar with Python first. For anyone following this
-                    roadmap dedicatedly, these will be the pre-requisites to get started with ML basics.<br>
-                    Honestly, we don't expect you to jump into complex libraries, train and fine-tune transformers or surpass the benchmark scores.
-                    We understand that it's not possible since you're completely new here and this requires ML mastery to understand the nuances in the dataset,
-                    what models will best suit the task etc.<br><br>
-                    <b>Our goal isn’t for you to master these intricate aspects right away, but rather to gain a solid understanding of the basics and how ML works.</b><br>
-                    As students of DS, you eventually need to dive into ML and this will be a fantastic hands-on opportunity & learning experience. Give it a try.
-                    Learn, join our sessions and enjoy the events :)
+                   Sure! This is for BS students across all houses. 
                   </div>
                 </div>
               </div>
@@ -311,11 +304,11 @@
                   <span class="icon flex-shrink-0">
                     <i class="lni lni-chevron-down"></i>
                   </span>
-                  <span>Question</span>
+                  <span>I joined in Sep'24 term. Any suggestions?</span>
                 </button>
                 <div id="collapseThree" class="accordion-collapse collapse">
                   <div class="ud-faq-body">
-                    To be Updated
+                    Please go through our archives - beginner sessions, event site contents. We've events lined up, wait for the updates.
                   </div>
                 </div>
               </div>
@@ -332,11 +325,11 @@
                   <span class="icon flex-shrink-0">
                     <i class="lni lni-chevron-down"></i>
                   </span>
-                  <span>Question</span>
+                  <span>Is there a fee to participate? </span>
                 </button>
                 <div id="collapseFour" class="accordion-collapse collapse">
                   <div class="ud-faq-body">
-                    To be Updated
+                    Not at all, applicable for all our events. It's absolutely free!
                   </div>
                 </div>
               </div>
@@ -351,11 +344,13 @@
                   <span class="icon flex-shrink-0">
                     <i class="lni lni-chevron-down"></i>
                   </span>
-                  <span>Question</span>
+                  <span>What topics are usually covered?</span>
                 </button>
                 <div id="collapseFive" class="accordion-collapse collapse">
                   <div class="ud-faq-body">
-                    To be Updated
+                       We have previously hosted modules similar to a bootcamp, focusing on Python for beginners.
+                    This foundational coding knowledge is essential, as we emphasize logic and creativity throughout the series.
+                    Our event topics encompass ML and NLP domains.
                   </div>
                 </div>
               </div>
@@ -370,11 +365,12 @@
                   <span class="icon flex-shrink-0">
                     <i class="lni lni-chevron-down"></i>
                   </span>
-                  <span>Question</span>
+                  <span>Where can I connect with the team?</span>
                 </button>
                 <div id="collapseSix" class="accordion-collapse collapse">
                   <div class="ud-faq-body">
-                   To be Updated
+                   You can write to us at <a href="mailto:wayanad-ml@ds.study.iitm.ac.in" target="_blank">wayanad-ml@ds.study.iitm.ac.in</a>.<br>
+                    Or simply start a chat in our discussion group. It is a community of AI and ML enthusiasts (our event participants) where many are happy to guide and help!
                   </div>
                 </div>
               </div>
