--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
                 among students with more than 1000+ unique participants combined and Profs. from IITGN, IITR and IITM course instructors being a part of it.
               </p>
               <a href="archives" class="ud-main-btn">Learn More</a>
-              <div class="ud-about-image">
+            </div>
+            <div class="ud-about-image">
             <img src="/ml/assets/images/logicloom/2.jpg" alt="about-image" />
           </div>
-            </div>
           </div>
         </div>
       </div>
@@ -285,7 +285,7 @@
                   <span class="icon flex-shrink-0">
                     <i class="lni lni-chevron-down"></i>
                   </span>
-                  <span>I'm now from Wayanad. Can I join?</span>
+                  <span>I'm not from Wayanad. Can I join?</span>
                 </button>
                 <div id="collapseTwo" class="accordion-collapse collapse">
                   <div class="ud-faq-body">
