--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
               <div class="ud-single-team wow fadeInUp" data-wow-delay=".1s">
                 <div class="ud-team-image-wrapper">
                   <div class="ud-team-image">
-                    <img src="assets/images/team/team-03.png" alt="team" />
+                    <img src="assets/images/team/sd.PNG" alt="team" />
                   </div>
   
                   <img
