--- a/index.html
+++ b/index.html
@@ -208,18 +208,16 @@
       <div class="container">
         <div class="ud-about-wrapper wow fadeInUp" data-wow-delay=".2s">
           <div class="ud-about-content-wrapper">
-            <div class="ud-about-content">
+            <div class="ud-about-content" style="max-width:100%;">
               <h2>About Us</h2>
               <p>
                 We launched our initiative in Wayanad in October 2023, and it has been met with overwhelming love, success, and
                 positive feedback. We are excited to see how it continues to thrive! We've conducted 2 mega-events at Paradox Technicals that became one of the celebrated events
                 among students with more than 1000+ unique participants combined and Profs. from IITGN, IITR and IITM course instructors being a part of it.
               </p>
+              <img src="/ml/assets/images/logicloom/2.jpg" style="max-width:50%;height:auto;"/><br>
               <a href="archives" class="ud-main-btn">Learn More</a>
             </div>
-          </div>
-          <div class="ud-about-image">
-            <img src="/ml/assets/images/logicloom/2.jpg" alt="about-image" />
           </div>
         </div>
       </div>
