--- a/index.html
+++ b/index.html
@@ -215,7 +215,8 @@
                 positive feedback. We are excited to see how it continues to thrive! We've conducted 2 mega-events at Paradox Technicals that became one of the celebrated events
                 among students with more than 1000+ unique participants combined and Profs. from IITGN, IITR and IITM course instructors being a part of it.
               </p>
-              <img src="/ml/assets/images/logicloom/2.jpg" style="max-width:50%;height:auto;"/><br>
+              <center><img src="/ml/assets/images/logicloom/2.jpg" style="max-width:50%;height:auto;"/></center>
+              <br><br>
               <a href="archives" class="ud-main-btn">Learn More</a>
             </div>
           </div>
