--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="ud-menu-scroll" href="news/inviting-article-submissions">Article Showcase</a>
+                    <a href="news/inviting-article-submissions">Article Showcase</a>
                   </li>
                 </ul>
               </div>
