--- a/events/pysprint.html
+++ b/events/pysprint.html
@@ -127,39 +127,37 @@ There will be an <b>additional bonus hands-on activity</b> that needs to be done
 
 <li>75% for Appreciation (including bonus points if applicable)</li>  
 <li>At least 2 tasks need to be submitted (including bonus activity if applicable)</li>
-
-**Milestones**
-
-**1\. At least 2 out of the first 3 tasks submitted?**
-
-**YES:** Eligible for Participation certificate (now, move to rule 2\)
-
-**NO, Just 1 submitted:** Will be allowed to take bonus hands-on activity, if attempted, will get Participation cert.
-
-**NO, None submitted:** Won’t be eligible for participation cert/bonus attempt.
-
-2\. **Eligible for Participation certificate?**
-
-**YES, total points\>=75% (till task-3 combined):** Eligible for Appreciation cert.
-
-**YES, but total points\<75% (till task-3 combined):** Will be allowed to take bonus hands-on activity  
-If attempted, will get Appreciation cert provisional to final points\>=75% after considering bonus scores (if points achieved \>75, it will be considered/capped as/at 75 only since this is a 2nd chance to maximize the points).
-
-If not attempted OR final points\<75% even after considering bonus score, Participation certificate will be the final status.
-
-**Understanding the bonus scoring**
-
+<br><br>
+<b>Milestones</b>
+<br>
+1. At least 2 out of the first 3 tasks submitted?
+<br>
+<b>YES</b>: Eligible for Participation certificate (now, move to rule 2)
+<br>
+<b>NO, Just 1 submitted:</b> Will be allowed to take bonus hands-on activity, if attempted, will get Participation cert.
+<br>
+<b>NO, None submitted:</b> Won’t be eligible for participation cert/bonus attempt.
+<br><br>
+2. <b>Eligible for Participation certificate?</b>
+<br>
+YES, total points>=75% (till task-3 combined): Eligible for Appreciation cert.<br>
+YES, but total points<75% (till task-3 combined): Will be allowed to take bonus hands-on activity -   
+If attempted, will get Appreciation cert provisional to final points>=75% after considering bonus scores (if points achieved >75, it will be considered/capped as/at 75 only since this is a 2nd chance to maximize the points).
+<br>
+If not attempted OR final points<75% even after considering bonus score, Participation certificate will be the final status.
+<br><br>
+<b>Understanding the bonus scoring</b>
+<br>
 One activity with 2 sub-tasks (1 point each)
-
-Say, you secured 10.25/14 points (from the 14 problems in tasks 1-3) & got a score of 73.21 (final score ceiled to 74%) i.e. Participation certificate.
-
-Now, if you do both the bonus activity perfectly and get 2 points, we will add this directly to your secured points out of 14 → your score becomes max(14,10.25+2) i.e. 12.25/14 → **final** **score becomes 88 (to be capped at 75\) from 74** → you now get an appreciation certificate\!
+<br>
+Say, you secured 10.25/14 points (from the 14 problems in tasks 1-3) & got a score of 73.21 (final score ceiled to 74%) i.e. Participation certificate.<br>
+Now, if you do both the bonus activity perfectly and get 2 points, we will add this directly to your secured points out of 14 → your score becomes max(14,10.25+2) i.e. 12.25/14 → <b>final score becomes 88 (to be capped at 75\) from 74</b> → you now get an appreciation certificate!
 <br>
 <b>Our portal</b>  
-[https://wayanadonline.unaux.com](https://wayanadonline.unaux.com) \- All tasks, activities, resources, solutions etc. will be released here. Submissions will only be accepted via our house portal.  
-We might NOT send reminder mails/notifications via mail at all times, it’s your responsibility to check at some intervals and stay updated. However, our volunteers keep posting the updates via our [discussion group](https://chat.whatsapp.com/HGA056Buywy9R6QHOPGmwe) \- you can join this, however you’re joining this at your own responsibility. Admins mayn’t always be aware of the contents being posted by other students here.
-
-Any questions? Feel free to drop an email at [wayanad-ml@ds.study.iitm.ac.in](mailto:wayanad-ml@ds.study.iitm.ac.in)
+All tasks, activities, resources, solutions etc. will be released on our event portal.<br> 
+We might NOT send reminder mails/notifications via mail at all times, it’s your responsibility to check at some intervals and stay updated. However, our volunteers keep posting the updates via our discussion group - you can join this. Admins mayn’t always be aware of the contents being posted by other students here.
+<br><br>
+Any questions? Feel free to drop an email at wayanad-ml@ds.study.iitm.ac.in.
               </p>
           </div>
           </div>
