--- a/events/mlc/schedule.html
+++ b/events/mlc/schedule.html
@@ -129,26 +129,37 @@
     </header>
     <!-- ====== Header End ====== -->
 
-<div class="pv5 pv6-l ph3 bg-center cover" style="background-image: url('/img/banner1.jpg')">
-  <div class="mw7 center ph3">
-    <div class="db mb3">
-      <div class="mw7 relative bg-fix-primary mb3">
-        <h1 class="f2 f1-l b di lh-title mb3 white mw6">
-          Schedule
-        </h1>
+      <!-- ====== Hero Start ====== -->
+    <section class="ud-hero" id="home" "style="background-image: url('img/banner1.jpg')">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <div class="ud-hero-content wow fadeInUp" data-wow-delay=".2s">
+              <h1 class="ud-hero-title">
+                Schedule
+              </h1>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="mw7 relative bg-fix-primary">
-        
+    </section>
+    <!-- ====== Hero End ====== -->
+
+     <!-- ====== About Start ====== -->
+    <section id="about" class="ud-about">
+      <div class="container">
+        <div class="ud-about-wrapper wow fadeInUp" data-wow-delay=".1s">
+          <div class="ud-about-content-wrapper">
+            <div class="ud-about-content" style="max-width:100%;">
+              <h2></h2>
+              <p>
+              </p>
+          </div>
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-</div>
-
-
-<div class="mw7 center ph3 pt4">
-
-
-</div>
+    </section>
+    <!-- ====== About End ====== -->
 
     <!-- ====== Footer Start ====== -->
     <footer class="ud-footer wow fadeInUp" data-wow-delay=".15s">
