--- a/events/logicloom2/index.html
+++ b/events/logicloom2/index.html
@@ -524,7 +524,7 @@ You <b>don't need prior knowledge of AI and ML</b> to participate. The difficult
                   <p style="text-align:justify;">
                     We suggest you to read the event <a href="/rules">Rule book (logicloom.iitmparadox.org/rules)</a> first, as everything has been explained there in detail.
               <br>Still, if you have any general questions or face technical issues, feel free to contact the organizers via mail at <a href="mailto:logicloom@ds.study.iitm.ac.in" target="_blank">logicloom@ds.study.iitm.ac.in</a>. We will try to reply back within one working day.
-                    <br>You may also contact our Public relations member at <a href="tel:+919007429038">+91 9007429038</a>.
+                    
                   </p>
                 </div>
               </li>
@@ -651,8 +651,7 @@ You <b>don't need prior knowledge of AI and ML</b> to participate. The difficult
               Event Organizers, <br>
               LogicLooM 2.0, Technicals,<br>
               Paradox 2024<br>
-              <strong>Email:</strong> logicloom@ds.study.iitm.ac.in<br>
-              <strong>Phone:</strong> +91 9007429038
+              <strong>Email:</strong> logicloom@ds.study.iitm.ac.in
             </p>
 
             <div class="social-links">
