--- a/events/pysprint.html
+++ b/events/pysprint.html
@@ -116,20 +116,23 @@
           <div class="ud-about-content-wrapper">
             <div class="ud-about-content" style="max-width:100%;">
               <h2>Event Details</h2>
+              <p><i class="lni lni-target-customer"></i> 24-batch students, Python beginners are the target participants<br>
+              <i class="lni lni-map-marker"></i> Online
+              </p>
               <p>
 There will be <b>3 tasks released on 2nd Oct, 3rd Oct and 4th Oct.</b> This will be a mix of auto-graded MCQs, SATQs and a few LATQs which will be manually evaluated. Hints and documentation will be provided wherever necessary. Objective is to test logical reasoning instead of theoretical knowledge or memorisation.
 <br><br>
 These tasks will be <b>due on 6th Oct, 7th Oct and 8th Oct respectively.</b>
 <br><br>
-There will be an <b>additional bonus hands-on activity</b> that needs to be done in Google Colab repository. This will be scheduled for only those who fall short of the cut-off points for appreciation OR the minimum participation% cut-off after task-3. Date: 13th Oct 2024.
+There will be an <b>additional bonus hands-on activity</b> on 13th Oct that needs to be done in Google Colab repository. This will be scheduled for only those who fall short of the cut-off points for appreciation OR the minimum participation% cut-off after task-3.
 <br><br>
 <b>Cut-off/Minimum Requirements</b>
 
-<li>75% for Appreciation (including bonus points if applicable)</li>  
-<li>At least 2 tasks need to be submitted (including bonus activity if applicable)</li>
+<li>75% for Appreciation (including hands-on activity if applicable)</li>  
+<li>At least 2 tasks need to be submitted (including hands-on activity if applicable)</li>
 <br><br>
 <b>Milestones</b>
-<br>
+<br><br>
 1. At least 2 out of the first 3 tasks submitted?
 <br>
 <b>YES</b>: Eligible for Participation certificate (now, move to rule 2)
@@ -140,22 +143,22 @@ There will be an <b>additional bonus hands-on activity</b> that needs to be done
 <br><br>
 2. <b>Eligible for Participation certificate?</b>
 <br>
-YES, total points>=75% (till task-3 combined): Eligible for Appreciation cert.<br>
-YES, but total points<75% (till task-3 combined): Will be allowed to take bonus hands-on activity -   
+YES, total points>=75% (till task-3): Eligible for Appreciation cert.<br><br>
+YES, but total points<75% (till task-3): Will be allowed to take bonus hands-on activity -   
 If attempted, will get Appreciation cert provisional to final points>=75% after considering bonus scores (if points achieved >75, it will be considered/capped as/at 75 only since this is a 2nd chance to maximize the points).
 <br>
 If not attempted OR final points<75% even after considering bonus score, Participation certificate will be the final status.
 <br><br>
 <b>Understanding the bonus scoring</b>
-<br>
+<br><br>
 One activity with 2 sub-tasks (1 point each)
 <br>
 Say, you secured 10.25/14 points (from the 14 problems in tasks 1-3) & got a score of 73.21 (final score ceiled to 74%) i.e. Participation certificate.<br>
-Now, if you do both the bonus activity perfectly and get 2 points, we will add this directly to your secured points out of 14 → your score becomes max(14,10.25+2) i.e. 12.25/14 → <b>final score becomes 88 (to be capped at 75\) from 74</b> → you now get an appreciation certificate!
-<br>
-<b>Our portal</b>  
-All tasks, activities, resources, solutions etc. will be released on our event portal.<br> 
-We might NOT send reminder mails/notifications via mail at all times, it’s your responsibility to check at some intervals and stay updated. However, our volunteers keep posting the updates via our discussion group - you can join this. Admins mayn’t always be aware of the contents being posted by other students here.
+Now, if you do both the bonus activity perfectly and get 2 points, we will add this directly to your secured points out of 14 → your score becomes max(14,10.25+2) i.e. 12.25/14 → <b>final score becomes 88 (to be capped at 75) from 74</b> → you now get an appreciation certificate!
+<br><br>
+<b>Regarding submissions</b><br><br>  
+All tasks, activities, resources, solutions etc. will be released on our event portal.<br>
+We might NOT send reminder mails/notifications via mail at all times, it’s your responsibility to check at intervals and stay updated. However, our volunteers keep posting the updates via our discussion group.
 <br><br>
 Any questions? Feel free to drop an email at wayanad-ml@ds.study.iitm.ac.in.
               </p>
