--- a/events/mlc/index.html
+++ b/events/mlc/index.html
@@ -84,44 +84,28 @@
                   </li>
 
                   <li class="nav-item">
-                    <a href="/ml/#about">About</a>
+                    <a href="faqs">FAQs</a>
                   </li>
                   <li class="nav-item">
-                    <a href="/ml/#contact">Contact</a>
+                    <a href="rules">Rules</a>
                   </li>
-                  <li class="nav-item nav-item-has-children">
-                    <a href="javascript:void(0)"> Events </a>
-                    <ul class="ud-submenu">
-                     <li class="ud-submenu-item">
-                        <a href="/ml/events/logicloom1/" class="ud-submenu-link">
-                          LogicLooM (Margazhi edition)
-                        </a>
-                      </li>
-                      <li class="ud-submenu-item">
-                        <a href="/ml/events/logicloom2/" class="ud-submenu-link">
-                          LogicLooM 2.0 (May - Jun 2024)
-                        </a>
-                      </li>
-                      <li class="ud-submenu-item">
-                        <a href="/ml/events/mlc/" class="ud-submenu-link">
-                          ML Challenge 1.0, 2.0
-                        </a>
-                      </li>
-                      <li class="ud-submenu-item">
-                        <a href="/ml/events/pysprint" class="ud-submenu-link">
-                          Pythonic Sprint
-                        </a>
-                      </li>
-                    </ul>
+                  <li class="nav-item">
+                    <a href="schedule">Schedule</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="results">Results</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="img/aimlc_v2_guide.pdf">2.0 Guidebook</a>
                   </li>
                 </ul>
               </div>
 
-              <!--<div class="navbar-btn d-none d-sm-inline-block">
-                <a class="ud-main-btn ud-white-btn" href="javascript:void(0)">
-                  Get Started
+<div class="navbar-btn d-none d-sm-inline-block">
+                <a class="ud-main-btn ud-white-btn" href="https://wayanadonline.unaux.com/mlc.php" target="_blank">
+                  Test Run Interface
                 </a>
-              </div>-->
+              </div>
             </nav>
           </div>
         </div>
@@ -130,7 +114,7 @@
     <!-- ====== Header End ====== -->
 
       <!-- ====== Hero Start ====== -->
-    <section class="ud-hero" id="home" "style="background-image: url('img/banner1.jpg')">
+    <section class="ud-hero" id="home" style="background-image: url('img/banner1.jpg')">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
