--- a/events/mlc/index.html
+++ b/events/mlc/index.html
@@ -101,7 +101,7 @@
                 </ul>
               </div>
 
-<div class="navbar-btn d-none d-sm-inline-block">
+<div class="navbar-btn">
                 <a class="ud-main-btn ud-white-btn" href="https://wayanadonline.unaux.com/mlc.php" target="_blank">
                   Test Run Interface
                 </a>
@@ -119,9 +119,12 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="ud-hero-content wow fadeInUp" data-wow-delay=".2s">
-              <h1 class="ud-hero-title">
+              <h1 class="ud-hero-title" style="text-shadow: 2px 2px red;">
                 The PAN-BS AI-ML Challenge
               </h1>
+               <p class="ud-hero-desc">
+              <i class="lni lni-calendar"></i> Aug 5 - 11 <i class="lni lni-map-marker"></i> Online
+              </p>
             </div>
           </div>
         </div>
@@ -129,21 +132,48 @@
     </section>
     <!-- ====== Hero End ====== -->
 
-     <!-- ====== About Start ====== -->
-    <section id="about" class="ud-about">
-      <div class="container">
-        <div class="ud-about-wrapper wow fadeInUp" data-wow-delay=".1s">
-          <div class="ud-about-content-wrapper">
-            <div class="ud-about-content" style="max-width:100%;">
-              <h2>About</h2>
-              <p>
-              </p>
-          </div>
-          </div>
+    <!-- ====== About Start ====== -->
+<section id="about" class="ud-about">
+  <div class="container">
+    <div class="ud-about-wrapper wow fadeInUp" data-wow-delay=".1s">
+      <div class="ud-about-content-wrapper">
+        <div class="ud-about-content" style="max-width:100%;">
+          <h2>About</h2>
+          <p>
+            Join us in an exhilarating exploration at the frontier of artificial intelligence and machine learning! Here’s why you should be part of this groundbreaking contest: you'll gain experience tackling the nuances in datasets, solving real-life problem statements, showcasing your ML and NLP skills, and collaborating with peers.
+          </p>
         </div>
       </div>
-    </section>
-    <!-- ====== About End ====== -->
+    </div>
+    <div class="ud-about-tracks">
+      <h2>Challenging Tracks 🌟</h2>
+      <div class="row">
+        <div class="col-md-6">
+          <img src="img/track1.jpg" alt="Track 1">
+          <p>Fake News Detection in Dravidian Languages</p>
+        </div>
+        <div class="col-md-6">
+          <img src="img/track2.PNG" alt="Track 2">
+          <p>AI-Generated Text Detection in Articles</p>
+        </div>
+      </div>
+    </div>
+    <div class="ud-about-motivation">
+      <h2>Motivation Behind the Tasks</h2>
+      <p>
+        <i class="fa fa-info-circle" aria-hidden="true"></i> <strong>Track 1:</strong> In an age of information overload, accurately categorizing fake news is crucial for fostering reliable communication. This task explores the effectiveness of NLP in understanding Dravidian languages, which are less widely spoken.
+        <br><br>
+        <i class="fa fa-info-circle" aria-hidden="true"></i> <strong>Track 2:</strong> With the rapid advancement of AI, distinguishing between human-written and AI-generated content is increasingly challenging. This challenge aims to explore the capabilities of ML models to accurately identify the origin of textual content, contributing to the development of robust techniques for detecting AI-generated text.
+      </p>
+    </div>
+    <div class="ud-about-guests">
+      <h2>Guests ✨</h2>
+      <p style="color:#a3001f;"><b>Mr. Piyush Wairale</b><br>Course Instructor, IITM DS</p>
+      <p style="color:#a3001f;"><b>Ms. Kothainayaki SK</b><br>Head, Student Affairs, IITM BS Programs</p>
+    </div>
+  </div>
+</section>
+<!-- ====== About End ====== -->
 
     <!-- ====== Footer Start ====== -->
     <footer class="ud-footer wow fadeInUp" data-wow-delay=".15s">
