--- a/events/mlc/results.html
+++ b/events/mlc/results.html
@@ -84,44 +84,28 @@
                   </li>
 
                   <li class="nav-item">
-                    <a href="/ml/#about">About</a>
+                    <a href="faqs">FAQs</a>
                   </li>
                   <li class="nav-item">
-                    <a href="/ml/#contact">Contact</a>
+                    <a href="rules">Rules</a>
                   </li>
-                  <li class="nav-item nav-item-has-children">
-                    <a href="javascript:void(0)"> Events </a>
-                    <ul class="ud-submenu">
-                     <li class="ud-submenu-item">
-                        <a href="/ml/events/logicloom1/" class="ud-submenu-link">
-                          LogicLooM (Margazhi edition)
-                        </a>
-                      </li>
-                      <li class="ud-submenu-item">
-                        <a href="/ml/events/logicloom2/" class="ud-submenu-link">
-                          LogicLooM 2.0 (May - Jun 2024)
-                        </a>
-                      </li>
-                      <li class="ud-submenu-item">
-                        <a href="/ml/events/mlc/" class="ud-submenu-link">
-                          ML Challenge 1.0, 2.0
-                        </a>
-                      </li>
-                      <li class="ud-submenu-item">
-                        <a href="/ml/events/pysprint" class="ud-submenu-link">
-                          Pythonic Sprint
-                        </a>
-                      </li>
-                    </ul>
+                  <li class="nav-item">
+                    <a href="schedule">Schedule</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="results">Results</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="img/aimlc_v2_guide.pdf">2.0 Guidebook</a>
                   </li>
                 </ul>
               </div>
 
-              <!--<div class="navbar-btn d-none d-sm-inline-block">
-                <a class="ud-main-btn ud-white-btn" href="javascript:void(0)">
-                  Get Started
+<div class="navbar-btn">
+                <a class="ud-main-btn ud-white-btn" href="https://wayanadonline.unaux.com/mlc.php" target="_blank">
+                  Test Run Interface
                 </a>
-              </div>-->
+              </div>
             </nav>
           </div>
         </div>
@@ -130,14 +114,17 @@
     <!-- ====== Header End ====== -->
 
       <!-- ====== Hero Start ====== -->
-    <section class="ud-hero" id="home" "style="background-image: url('img/banner1.jpg')">
+    <section class="ud-hero" id="home" style="background-image: url('img/banner1.jpg')">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
             <div class="ud-hero-content wow fadeInUp" data-wow-delay=".2s">
-              <h1 class="ud-hero-title">
-                Results
+              <h1 class="ud-hero-title" style="text-shadow: 2px 2px red;">
+                The PAN-BS AI-ML Challenge
               </h1>
+               <p class="ud-hero-desc">
+              <i class="lni lni-calendar"></i> Aug 5 - 11 <i class="lni lni-map-marker"></i> Online
+              </p>
             </div>
           </div>
         </div>
@@ -145,21 +132,175 @@
     </section>
     <!-- ====== Hero End ====== -->
 
-     <!-- ====== About Start ====== -->
-    <section id="about" class="ud-about">
-      <div class="container">
-        <div class="ud-about-wrapper wow fadeInUp" data-wow-delay=".1s">
-          <div class="ud-about-content-wrapper">
-            <div class="ud-about-content" style="max-width:100%;">
-              <h2></h2>
-              <p>
-              </p>
-          </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- ====== About End ====== -->
+    <!-- ====== About Start ====== -->
+<section id="about" class="ud-about">
+  <div class="container">
+    <div class="ud-about-wrapper wow fadeInUp" data-wow-delay=".1s">
+      <div class="ud-about-content-wrapper">
+        <div class="ud-about-content" style="max-width:100%;">
+          <h2>Results</h2>      
+
+          <h3>Track - 2 Qualifying Teams</h3>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Team ID</th>
+                <th></th>
+                <th>macF1</th>
+                <th></th>
+                <th>Acc</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>T22104</td>
+                <td></td>
+                <td>0.963</td>
+                <td></td>
+                <td>0.986</td>
+              </tr>
+              <tr>
+                <td>T22082</td>
+                <td></td>
+                <td>0.956</td>
+                <td></td>
+                <td>0.983</td>
+              </tr>
+              <tr>
+                <td>T12173</td>
+                <td></td>
+                <td>0.951</td>
+                <td></td>
+                <td>0.983</td>
+              </tr>
+              <tr>
+                <td>T32019</td>
+                <td></td>
+                <td>0.922</td>
+                <td></td>
+                <td>0.969</td>
+              </tr>
+              <tr>
+                <td>T22121</td>
+                <td></td>
+                <td>0.892</td>
+                <td></td>
+                <td>0.954</td>
+              </tr>
+              <tr>
+                <td>T22094</td>
+                <td></td>
+                <td>0.863</td>
+                <td></td>
+                <td>0.95</td>
+              </tr>
+              <tr>
+                <td>T22128</td>
+                <td></td>
+                <td>0.861</td>
+                <td></td>
+                <td>0.938</td>
+              </tr>
+              <tr>
+                <td>T12002</td>
+                <td></td>
+                <td>0.833</td>
+                <td></td>
+                <td>0.917</td>
+              </tr>
+              <tr>
+                <td>T22074</td>
+                <td></td>
+                <td>0.79</td>
+                <td></td>
+                <td>0.888</td>
+              </tr>
+              <tr>
+                <td>T22103</td>
+                <td></td>
+                <td>0.783</td>
+                <td></td>
+                <td>0.886</td>
+              </tr>
+              <tr>
+                <td>T22029</td>
+                <td></td>
+                <td>0.713</td>
+                <td></td>
+                <td>0.82</td>
+              </tr>
+              <tr>
+                <td>T32007</td>
+                <td></td>
+                <td>0.697</td>
+                <td></td>
+                <td>0.805</td>
+              </tr>
+            </tbody>
+          </table>
+
+          <h3>Track - 1 Qualifying Teams</h3>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Team ID</th>
+                <th></th>
+                <th>macF1</th>
+                <th></th>
+                <th>Acc</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>T11017</td>
+                <td></td>
+                <td>0.419</td>
+                <td></td>
+                <td>0.765</td>
+              </tr>
+              <tr>
+                <td>T21154</td>
+                <td></td>
+                <td>0.405</td>
+                <td></td>
+                <td>0.871</td>
+              </tr>
+              <tr>
+                <td>T21166</td>
+                <td></td>
+                <td>0.4</td>
+                <td></td>
+                <td>0.841</td>
+              </tr>
+              <tr>
+                <td>T11006</td>
+                <td></td>
+                <td>0.364</td>
+                <td></td>
+                <td>0.803</td>
+              </tr>
+              <tr>
+                <td>T21141</td>
+                <td></td>
+                <td>0.336</td>
+                <td></td>
+                <td>0.886</td>
+              </tr>
+              <tr>
+                <td>T21020</td>
+                <td></td>
+                <td>0.318</td>
+                <td></td>
+                <td>0.879</td>
+              </tr>
+            </tbody>
+          </table>
+
+</div>
+    </div>
+  </div></div>
+</section>
+<!-- ====== About End ====== -->
 
     <!-- ====== Footer Start ====== -->
     <footer class="ud-footer wow fadeInUp" data-wow-delay=".15s">
