--- a/events/mlc/index.html
+++ b/events/mlc/index.html
@@ -156,15 +156,15 @@
       </div>
     </div>
 
-        <h2>Motivation Behind the Tasks</h2>
+        <h2>Motivation Behind the Tasks</h2><br>
       <p>
         <i class="lni lni-checkmark-circle"></i> <strong>Track 1:</strong> In an age of information overload, accurately categorizing fake news is crucial for fostering reliable communication. This task explores the effectiveness of NLP in understanding Dravidian languages, which are less widely spoken.
         <br><br>
         <i class="lni lni-checkmark-circle"></i> <strong>Track 2:</strong> With the rapid advancement of AI, distinguishing between human-written and AI-generated content is increasingly challenging. This challenge aims to explore the capabilities of ML models to accurately identify the origin of textual content, contributing to the development of robust techniques for detecting AI-generated text.
       </p>
 
-      <h2>Guests ✨</h2>
-      <p style="color:#a3001f;"><b>Mr. Piyush Wairale</b><br>Course Instructor, IITM DS</p>
+      <h2>Guests ✨</h2><br>
+      <p style="color:#a3001f;"><b>Mr. Piyush Wairale</b><br>Course Instructor, IITM BS Program (DS)</p><br>
       <p style="color:#a3001f;"><b>Ms. Kothainayaki SK</b><br>Head, Student Affairs, IITM BS Programs</p>
 
 </div>
